# intellimeeter

./: .gitignore  AI_APPROACH.md  CHANGELOG.md  CHECKLIST.md  DECISIONS.md  Makefile  README.md  TESTING.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: __init__.py  action_item.py  auth.py  deps.py  evaluation.py  meetings.py
app/core/: auth.py  config.py  exceptions.py  logger.py  rate_limit.py  response.py  trace.py
app/database/: db.py  models.py
app/integrations/: discord.py  llm.py
app/jobs/: scheduler.py
app/middleware/: trace.py
app/schemas/: action_item.py  analysis.py  auth.py  evaluation.py  meeting.py  response.py
app/services/: action_items.py  analysis.py  meetings.py  reminders.py
migrations/: env.py
tests/: conftest.py
tests/integration/: test_lifecycle.py  test_rate_limiting.py
tests/unit/: test_auth.py  test_models.py  test_rate_limit_logic.py
