[project]
name = "intellimeeter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "greenlet>=3.5.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "openai>=2.41.0",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
